@@ -1,9 +1,9 @@
 // This runs after a 'fresh' boot
 var s = require("Storage").readJSON("setting.json",1)||{};
 /* If were being called from JS code in order to load the clock quickly (eg from a launcher)
-and the clock in question doesn't have widgets, force a normal 'load' as this will then
-reset everything and remove the widgets. */
-if (global.__FILE__ && !s.clockHasWidgets) {load();throw "Clock has no widgets, can't fast load";}
+and the clock in question doesn't have widgets, and widgets are loaded, force a normal 'load'
+as this will then reset everything and remove the widgets. */
+if (global.__FILE__ && !s.clockHasWidgets && global.WIDGETS!==undefined) {load();throw "Widgets defined and clock has no widgets, can't fast load";}
 // Otherwise continue to try and load the clock
 var _clkApp = require("Storage").read(s.clock);
 if (!_clkApp) {
